<resources>
    <string name="app_name">TerraMobile</string>
    <string name="failure_title_msg">Fail</string>
    <string name="missing_geopackage_file">Missing project file.</string>
    <!-- ActionBar -->
    <string name="gather_data">Gather data</string>
    <string name="project">Project</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <!-- Gather data -->
    <string name="error_start_form">Failure on starting of the gathering form.</string>
    <string name="missing_editable_layer">Select one gathering layer.</string>
    <string name="missing_form_data">Missing data from gathering form.</string>
    <string name="cancel_form_data">Canceled data collection form.</string>
    <string name="default_feature_info_msg">Not found Feature data.</string>
    <!-- Sync data -->
    <!-- List project -->
    <string name="no_connection">Connect to the internet</string>
    <string name="loading_prj_list">Loading project list…</string>
    <string name="available_projects">Available projects</string>
    <string name="projects_not_found">No projects were found</string>
    <string name="close">Close</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="not_logged">You have to authenticate first</string>
    <!-- Remove project -->
    <string name="project_remove_title">Remove project</string>
    <string name="project_remove_confirm">Do you want to remove the project from the device?</string>
    <string name="project_removed_successfully">Project removed successfully</string>
    <string name="error_removing_project">Couldn\'t remove the project</string>

    <!-- Download -->
    <string name="downloading">Downloading files…</string>
    <string name="file">File</string>
    <string name="decompressing">Decompressing…</string>
    <string name="download_success">Files downloaded successfully!</string>
    <string name="download_failed">Download failed!</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="project_download_confirm">The existing data will be overwritten. Would you like to continue?</string>
    <string name="project_overwrite_title">Overwrite project</string>
    <!-- Upload -->
    <string name="send_project_upload">Sending project...</string>
    <string name="project_upload">Upload project data</string>
    <string name="upload">Upload project</string>
    <string name="error_uploding_missing_layers">Select at least one layer</string>
    <string name="upload_package_exists">There is a pending project that hasn\'t been transferred. Do you want to transfer it now?</string>
    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="test_memory">Test Memory</string>
    <string name="sync_preferences">Sync preferences</string>
    <string name="map_preferences">Map preferences</string>
    <string name="gps_preferences">GPS preferences</string>
    <!-- Sync preferences -->
    <string name="credentials">Credentials</string>
    <string name="hint_url_server">Enter the URL</string>
    <!-- credentials -->
    <string name="hint_user_name_credentials">User name</string>
    <string name="hint_password_credentials">Password</string>
    <string name="hint_retype_password_credentials">Retype password</string>
    <string name="error_user_name">Enter the user name</string>
    <string name="error_password">Enter the password</string>
    <string name="error_retype_password">Retype the password</string>
    <string name="error_passwords_match">Passwords doesn\'t match</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <!-- GPS preferences -->
    <string name="hint_gps_tracker">Keep visible GPS location?</string>
    <string name="hint_gps_center">Retain my location on map center?</string>
    <!-- Server URL -->
    <string name="hint_server_url">Enter the server URL</string>
    <string name="server_url">Set the server URL</string>
    <!-- Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="data_not_found">Not Found</string>
    <!-- Drawer items(layers) -->
    <string-array name="menu_groups">
        <item name="layers">Layers</item><!-- This "Group Menu" does not have static items. -->
        <item name="gathering_layers">Gathering Layers</item><!-- This "Group Menu" does not have static items. -->
    </string-array>
    <!-- Error messages -->
    <string name="server_not_available">Sorry, there\'s no web server available</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_download_task">DownloadTask</string>
    <string name="read_features_exception">Unable to read layer features.</string>
    <string name="read_features_out_of_memory_exception">Unable to read layer features, due to memory limitation.</string>
    <string name="feature_not_found">Feature not found on selected editable layer.</string>
    <string name="unexpected_exception">Unexpected error.</string>
    <string name="settings_insert_exception">Unable to insert settings on database.</string>
    <string name="settings_update_exception">Unable to update settings on database.</string>
    <string name="settings_query_exception">Unable to get settings from database.</string>
    <string name="settings_init_exception">Unable to initialize default settings on database.</string>
    <string name="style_insert_exception">Unable to insert SLD style on database.</string>
    <string name="style_update_exception">Unable to update SLD style on database.</string>
    <string name="style_query_exception">Unable to get SLD style from database.</string>
    <string name="layer_setting_query_exception">Unable to get layer settings from database.</string>
    <string name="layer_setting_delete_exception">Unable to delete layer settings from database.</string>
    <string name="layer_style_delete_exception">Unable to delete layer style from database.</string>
    <string name="layer_form_delete_exception">Unable to delete layer form from database.</string>
    <string name="media_table_delete_exception">Unable to delete media table from database.</string>
    <string name="media_table_create_exception">Unable to create media table from database.</string>
    <string name="media_table_insert_exception">Unable to insert media into medias table.</string>
    <string name="invalid_database_exception">Invalid database instance.</string>
    <string name="failed_getting_project_setting">Failed while getting a project setting.</string>
    <string name="failed_getting_project_creation_date">Failed getting a project creation date.</string>
    <string name="failed_upload_file_path_project">Failed to get new file name due to invalid setting key.</string>
    <string name="invalid_project">Unable to load due to invalid project.</string>
    <string name="download_project_first">Please download project first.</string>
    <string name="layer_settings_insert_exception">Unable to insert layer settings on database.</string>
    <string name="layer_settings_update_exception">Unable to update layer settings on database.</string>
    <string name="layer_settings_query_exception">Unable to get layer settings from database.</string>
    <string name="drop_gpkg_exception">Unable to drop the upload package after fail on send data to server.</string>

    <!-- Message window title -->
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="fail">Failure</string>
    <!-- Confirm -->
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="offline">Offline</string>
    <string name="copying_file">Copying file…</string>
    <!-- Marker context menu -->
    <string name="title_marker">Location</string>
    <string name="title_move_marker">Move Marker</string>
    <string name="title_remove_marker">Remove Marker</string>
    <string name="message_remove_marker">Would like remove this marker?</string>
    <string name="message_move_marker_gps">Would like move this marker to current your GPS location?</string>
    <string name="message_move_marker_center">Would like move this marker to center of the map?</string>
    <string name="message_waiting_location_gps">Waiting GPS location...</string>
    <string name="title_fail_message_marker">Warning</string>
    <string name="failure_on_remove_marker">Failure on remove Marker.</string>
    <string name="failure_on_save_new_location">Failure on save the new location.</string>
    <string name="failure_on_identify_marker">Failure on identify the Marker.</string>
    <!-- Location services -->
    <string name="disabled_provider">Your location provider is disabled.</string>
    <!-- Info panel to display feature attributes -->
    <string name="head_label_info">Label</string>
    <string name="head_value_info">Value</string>
    <string name="update_fail_original_gpkg_exception">Sending process is aborted after fail on data update in gathering package.</string>
    <string name="update_fail_upload_gpkg_exception">Sending process is aborted after fail on data update in upload package.</string>
    <string name="no_data_to_send_exception">Not found data to send.</string>
    <string name="no_layer_to_send_exception">No layer to send.</string>
    <string name="build_upload_gpkg_exception">Failed to process data to send.</string>
    <string name="feature_set_status_exception">Failure to set status property toward change value.</string>
</resources>
