<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/acquire_new_point"
        android:title="@string/gather_data"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/project"
        android:title="@string/project"
        android:icon="@android:drawable/stat_notify_sync"
        android:showAsAction="always|withText" />


    <item android:id="@+id/test_memory"
        android:title="@string/test_memory"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/test_icon_inpe"
        android:title="Test Icon Inpe"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/test_icon1"
        android:title="Test Icon 1"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/test_icon2"
        android:title="Test Icon 2"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/test_icon3"
        android:title="Test Icon 3"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/test_icon4"
        android:title="Test Icon 4"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/test_sld"
        android:title="Test SLD"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <!--
        <item android:id="@+id/test_editable_layer"
            android:title="@string/test_editable_layer"
            android:orderInCategory="100"
            android:showAsAction="never" />

        <item android:id="@+id/test_insert_sfs"
            android:title="@string/test_insert_sfs"
            android:orderInCategory="100"
            android:showAsAction="never" />
    -->
    <item android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>