<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".controller.activity.SettingsActivity">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serverURL"
        android:inputType="textUri"
        android:ems="10"
        android:hint="@string/hint_server_url" />
    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerHorizontal"
        android:layout_below="@+id/serverURL"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/serverURL">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_save"
            android:id="@+id/btnSave"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="0.5" />

        <View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="1dip"
            android:layout_height="55dip"
            android:background="?android:attr/dividerVertical"
            android:layout_weight="0" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_cancel"
            android:id="@+id/btnCancel"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="0.5" />
    </LinearLayout>
</RelativeLayout>